--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "bluebird": "^3.5.0",
     "chalk": "^1.1.3",
     "ellipsize": "0.0.3",
-    "inquirer": "^5.2.0",
+    "inquirer": "^6.0.0",
     "lodash": "^4.17.10",
     "preferences": "^0.2.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^10.0.1",
     "chai": "^3.4.1",
     "eslint": "^4.19.1",
     "mocha": "^5.1.1",
